// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[GoalEdit] screen rendering test should render without crashing 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginBottom": 20,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 20,
              "width": "85%",
            },
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          placeholder="목표"
          placeholderTextColor="#979797"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "borderBottomColor": "#000",
                "borderBottomWidth": 1,
                "fontSize": 24,
                "lineHeight": 28,
                "marginBottom": 15,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 25,
                "width": "95%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#000",
                  "borderBottomWidth": 1,
                  "marginBottom": 15,
                  "width": "100%",
                },
                Object {
                  "width": "80%",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                  },
                  undefined,
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                testID="ios_touchable_wrapper"
              >
                <View
                  pointerEvents="box-only"
                >
                  <TextInput
                    allowFontScaling={true}
                    editable={false}
                    rejectResponderTermination={true}
                    style={
                      Array [
                        undefined,
                        Object {
                          "color": "#B3B3B3",
                        },
                      ]
                    }
                    testID="text_input"
                    underlineColorAndroid="transparent"
                    value="상속 목표를 설정해주세요."
                  />
                </View>
              </TouchableOpacity>
              <Modal
                hardwareAccelerated={false}
                supportedOrientations={
                  Array [
                    "portrait",
                    "landscape",
                  ]
                }
                testID="ios_modal"
                transparent={true}
                visible={false}
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                      undefined,
                    ]
                  }
                  testID="ios_modal_top"
                />
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#f8f8f8",
                        "borderTopColor": "#dedede",
                        "borderTopWidth": 1,
                        "flexDirection": "row",
                        "height": 45,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 10,
                        "zIndex": 2,
                      },
                      undefined,
                    ]
                  }
                  testID="input_accessory_view"
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                        },
                        undefined,
                      ]
                    }
                  >
                    <TouchableOpacity
                      activeOpacity={1}
                      onPress={null}
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderColor": "#a1a1a1",
                              "borderRightWidth": 1.5,
                              "borderTopWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            },
                            undefined,
                            Object {
                              "marginLeft": 11,
                              "transform": Array [
                                Object {
                                  "translateY": 4,
                                },
                                Object {
                                  "rotate": "-45deg",
                                },
                              ],
                            },
                            undefined,
                            Object {},
                          ]
                        }
                      />
                    </TouchableOpacity>
                    <TouchableOpacity
                      activeOpacity={1}
                      onPress={null}
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderColor": "#a1a1a1",
                              "borderRightWidth": 1.5,
                              "borderTopWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            },
                            undefined,
                            Object {
                              "marginLeft": 22,
                              "transform": Array [
                                Object {
                                  "translateY": -5,
                                },
                                Object {
                                  "rotate": "135deg",
                                },
                              ],
                            },
                            undefined,
                            Object {},
                          ]
                        }
                      />
                    </TouchableOpacity>
                  </View>
                  <TouchableOpacity
                    activeOpacity={0.2}
                    hitSlop={
                      Object {
                        "bottom": 4,
                        "left": 4,
                        "right": 4,
                        "top": 4,
                      }
                    }
                    testID="done_button"
                  >
                    <View
                      testID="needed_for_touchable"
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Array [
                            Object {
                              "color": "#007aff",
                              "fontSize": 17,
                              "fontWeight": "600",
                              "paddingRight": 11,
                              "paddingTop": 1,
                            },
                            Object {
                              "color": "black",
                              "fontSize": 18,
                              "fontWeight": "bold",
                              "lineHeight": 21,
                            },
                            Object {},
                          ]
                        }
                        testID="done_text"
                      >
                        Done
                      </Text>
                    </View>
                  </TouchableOpacity>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#d0d4da",
                        "justifyContent": "center",
                      },
                      Object {
                        "height": 215,
                      },
                      undefined,
                    ]
                  }
                >
                  <Picker
                    mode="dialog"
                    testID="ios_picker"
                  >
                    <Picker.Item
                      color="#B3B3B3"
                      label="상속 목표를 설정해주세요."
                    />
                    <Picker.Item
                      color="black"
                      label="Football"
                      value="football"
                    />
                    <Picker.Item
                      color="black"
                      label="Baseball"
                      value="baseball"
                    />
                    <Picker.Item
                      color="black"
                      label="Hockey"
                      value="hockey"
                    />
                  </Picker>
                </View>
              </Modal>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexBasis": "22%",
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                },
              ]
            }
          >
            <TouchableWithoutFeedback
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingBottom": 0,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              <SvgMock
                fill="#979797"
                height={22}
                width={22}
              />
            </TouchableWithoutFeedback>
            <Text
              style={
                Array [
                  Object {
                    "color": "#979797",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "lineHeight": 26,
                    "marginBottom": "auto",
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": "auto",
                  },
                ]
              }
            >
              fork
            </Text>
          </View>
        </View>
        <TextInput
          allowFontScaling={true}
          multiline={true}
          numberOfLines={7}
          placeholder="메모를 입력하세요"
          placeholderTextColor="#B3B3B3"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#F7F7F7",
                "borderColor": "#E6E6E6",
                "borderRadius": 5,
                "borderStyle": "solid",
                "borderWidth": 1,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#00DF9B",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 28,
              "fontWeight": "bold",
              "lineHeight": 28,
              "marginBottom": "auto",
              "marginLeft": 5,
              "marginRight": 5,
              "marginTop": 5,
              "width": "97%",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {},
              Object {
                "color": "#fff",
              },
            ]
          }
        >
          확인
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`[GoalEdit] screen rendering test should render without crashing 2`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginBottom": 20,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 20,
              "width": "85%",
            },
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          placeholder="목표"
          placeholderTextColor="#979797"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "borderBottomColor": "#000",
                "borderBottomWidth": 1,
                "fontSize": 24,
                "lineHeight": 28,
                "marginBottom": 15,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 25,
                "width": "95%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#000",
                  "borderBottomWidth": 1,
                  "marginBottom": 15,
                  "width": "100%",
                },
                Object {
                  "width": "80%",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                  },
                  undefined,
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                testID="ios_touchable_wrapper"
              >
                <View
                  pointerEvents="box-only"
                >
                  <TextInput
                    allowFontScaling={true}
                    editable={false}
                    rejectResponderTermination={true}
                    style={
                      Array [
                        undefined,
                        Object {
                          "color": "#B3B3B3",
                        },
                      ]
                    }
                    testID="text_input"
                    underlineColorAndroid="transparent"
                    value="상속 목표를 설정해주세요."
                  />
                </View>
              </TouchableOpacity>
              <Modal
                hardwareAccelerated={false}
                supportedOrientations={
                  Array [
                    "portrait",
                    "landscape",
                  ]
                }
                testID="ios_modal"
                transparent={true}
                visible={false}
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                      undefined,
                    ]
                  }
                  testID="ios_modal_top"
                />
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#f8f8f8",
                        "borderTopColor": "#dedede",
                        "borderTopWidth": 1,
                        "flexDirection": "row",
                        "height": 45,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 10,
                        "zIndex": 2,
                      },
                      undefined,
                    ]
                  }
                  testID="input_accessory_view"
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                        },
                        undefined,
                      ]
                    }
                  >
                    <TouchableOpacity
                      activeOpacity={1}
                      onPress={null}
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderColor": "#a1a1a1",
                              "borderRightWidth": 1.5,
                              "borderTopWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            },
                            undefined,
                            Object {
                              "marginLeft": 11,
                              "transform": Array [
                                Object {
                                  "translateY": 4,
                                },
                                Object {
                                  "rotate": "-45deg",
                                },
                              ],
                            },
                            undefined,
                            Object {},
                          ]
                        }
                      />
                    </TouchableOpacity>
                    <TouchableOpacity
                      activeOpacity={1}
                      onPress={null}
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderColor": "#a1a1a1",
                              "borderRightWidth": 1.5,
                              "borderTopWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            },
                            undefined,
                            Object {
                              "marginLeft": 22,
                              "transform": Array [
                                Object {
                                  "translateY": -5,
                                },
                                Object {
                                  "rotate": "135deg",
                                },
                              ],
                            },
                            undefined,
                            Object {},
                          ]
                        }
                      />
                    </TouchableOpacity>
                  </View>
                  <TouchableOpacity
                    activeOpacity={0.2}
                    hitSlop={
                      Object {
                        "bottom": 4,
                        "left": 4,
                        "right": 4,
                        "top": 4,
                      }
                    }
                    testID="done_button"
                  >
                    <View
                      testID="needed_for_touchable"
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Array [
                            Object {
                              "color": "#007aff",
                              "fontSize": 17,
                              "fontWeight": "600",
                              "paddingRight": 11,
                              "paddingTop": 1,
                            },
                            Object {
                              "color": "black",
                              "fontSize": 18,
                              "fontWeight": "bold",
                              "lineHeight": 21,
                            },
                            Object {},
                          ]
                        }
                        testID="done_text"
                      >
                        Done
                      </Text>
                    </View>
                  </TouchableOpacity>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#d0d4da",
                        "justifyContent": "center",
                      },
                      Object {
                        "height": 215,
                      },
                      undefined,
                    ]
                  }
                >
                  <Picker
                    mode="dialog"
                    testID="ios_picker"
                  >
                    <Picker.Item
                      color="#B3B3B3"
                      label="상속 목표를 설정해주세요."
                    />
                    <Picker.Item
                      color="black"
                      label="Football"
                      value="football"
                    />
                    <Picker.Item
                      color="black"
                      label="Baseball"
                      value="baseball"
                    />
                    <Picker.Item
                      color="black"
                      label="Hockey"
                      value="hockey"
                    />
                  </Picker>
                </View>
              </Modal>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexBasis": "22%",
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                },
              ]
            }
          >
            <TouchableWithoutFeedback
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingBottom": 0,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              <SvgMock
                fill="#979797"
                height={22}
                width={22}
              />
            </TouchableWithoutFeedback>
            <Text
              style={
                Array [
                  Object {
                    "color": "#979797",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "lineHeight": 26,
                    "marginBottom": "auto",
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": "auto",
                  },
                ]
              }
            >
              fork
            </Text>
          </View>
        </View>
        <TextInput
          allowFontScaling={true}
          multiline={true}
          numberOfLines={7}
          placeholder="메모를 입력하세요"
          placeholderTextColor="#B3B3B3"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#F7F7F7",
                "borderColor": "#E6E6E6",
                "borderRadius": 5,
                "borderStyle": "solid",
                "borderWidth": 1,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#00DF9B",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 28,
              "fontWeight": "bold",
              "lineHeight": 28,
              "marginBottom": "auto",
              "marginLeft": 5,
              "marginRight": 5,
              "marginTop": 5,
              "width": "97%",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {},
              Object {
                "color": "#fff",
              },
            ]
          }
        >
          확인
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": "100%",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingBottom": 4,
          "paddingEnd": 4,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <TouchableWithoutFeedback
        hitSlop={
          Object {
            "bottom": 4,
            "left": 4,
            "right": 4,
            "top": 4,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(250, 186, 48, 0.95)",
              },
              Object {
                "borderRadius": 14,
                "height": 28,
                "justifyContent": "center",
                "paddingHorizontal": 12,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 12,
                "includeFontPadding": false,
                "lineHeight": 16,
              }
            }
          >
            Dismiss All
          </Text>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <ScrollView
      data={
        Array [
          Object {
            "category": "Warning: AsyncStorage has been extracted from react-native core and will be removed in a future release. It can now be installed and imported from '@react-native-community/async-storage' instead of 'react-native'. See https://github.com/react-native-community/react-native-async-storage",
            "warnings": Array [
              YellowBoxWarning {
                "message": Object {
                  "content": "Warning: AsyncStorage has been extracted from react-native core and will be removed in a future release. It can now be installed and imported from '@react-native-community/async-storage' instead of 'react-native'. See https://github.com/react-native-community/react-native-async-storage",
                  "substitutions": Array [],
                },
                "stack": Array [
                  Object {
                    "arguments": Array [],
                    "column": 13,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\fbjs\\\\lib\\\\warning.js",
                    "lineNumber": 30,
                    "methodName": "printWarning",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 18,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\fbjs\\\\lib\\\\warning.js",
                    "lineNumber": 51,
                    "methodName": "Object.<anonymous>.warning",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 3,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\react-native\\\\Libraries\\\\Utilities\\\\warnOnce.js",
                    "lineNumber": 29,
                    "methodName": "warning",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 5,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\react-native\\\\Libraries\\\\react-native\\\\react-native-implementation.js",
                    "lineNumber": 175,
                    "methodName": "Object.warnOnce [as AsyncStorage]",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 18,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\src\\\\Context\\\\User\\\\User.tsx",
                    "lineNumber": 1387,
                    "methodName": "getUserInfo",
                  },
                ],
                "symbolicated": Object {
                  "error": null,
                  "stack": null,
                  "status": "NONE",
                },
              },
            ],
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      scrollEnabled={false}
      scrollEventThrottle={50}
      scrollsToTop={false}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "height": 48.5,
        }
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View
        style={null}
      >
        <TouchableWithoutFeedback>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(250, 186, 48, 0.95)",
                },
                Object {
                  "height": 48,
                  "justifyContent": "center",
                  "marginTop": 0.5,
                  "paddingHorizontal": 12,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={2}
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "flex": 1,
                    "fontSize": 14,
                    "includeFontPadding": false,
                    "lineHeight": 18,
                  }
                }
              >
                <Text>
                  Warning: AsyncStorage has been extracted from react-native core and will be removed in a future release. It can now be installed and imported from '@react-native-community/async-storage' instead of 'react-native'. See https://github.com/react-native-community/react-native-async-storage
                </Text>
              </Text>
            </View>
          </View>
        </TouchableWithoutFeedback>
      </View>
    </ScrollView>
    <SafeAreaView
      style={
        Object {
          "backgroundColor": "rgba(250, 186, 48, 0.95)",
          "marginTop": 0.5,
        }
      }
    />
  </View>
</View>
`;
